fix(docker): minor refactoring for docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,6 +44,9 @@ services:
     ports:
       - 8080
     restart: on-failure
+    deploy:
+      mode: replicated
+      replicas: 3
     networks:
       - service-network
 
